# PyCppProject

./: CMakeLists.txt  README.md  main.cpp
Cpp/: add.cpp  div.cpp  functions.h  functions_wrapper.cpp  mul.cpp  sub.cpp
Python/: setup.py  test.py
build_lib_demo/: hello.cpp  setup.py  test.py
